--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //添加maven地址
+        maven { url "https://jitpack.io" }
+        maven { url 'https://dl.bintray.com/weixia/maven' }
     }
 }
 
