--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.30"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,12 +19,17 @@ allprojects {
     repositories {
         google()
         jcenter()
-        //添加maven地址
-        maven { url "https://jitpack.io" }
-        maven { url 'https://dl.bintray.com/weixia/maven' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    compile_sdk_version = 28
+    min_sdk_version = 15
+    target_sdk_version = 28
+    version_code = 1
+    version_name = '1.0'
 }
