--- a/flybanner/build.gradle
+++ b/flybanner/build.gradle
@@ -1,12 +1,17 @@
-apply plugin: 'com.android.library'
+apply {
+    plugin "com.android.library"
+    plugin "kotlin-android"
+    plugin "kotlin-android-extensions"
+    plugin "kotlin-kapt"
+}
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion compile_sdk_version
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
+        versionCode version_code
+        versionName version_name
     }
     buildTypes {
         release {
@@ -23,3 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
 }
+
+apply from: 'bintray.gradle'
