--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,8 @@
-apply plugin: 'com.android.application'
+apply {
+    plugin 'com.android.application'
+    plugin 'kotlin-android-extensions'
+    plugin 'kotlin-android'
+}
 
 android {
     compileSdkVersion compile_sdk_version
@@ -32,4 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    implementation "androidx.core:core-ktx:1.0.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
