--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-    implementation project(':flybanner')
+//    implementation project(':flybanner')
+    implementation 'me.xia:x-flybanner:1.1.1'
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
