1.远程仓库地址修改

--- a/flybanner/project.properties
+++ b/flybanner/project.properties
@@ -3,8 +3,8 @@
 name=x-flybanner
 userOrg=weixia
 groupId=me.xia
-gitUrl=https://github.com/wexia/X-FlyBanner.git
-website=https://github.com/wexia/X-FlyBanner
+gitUrl=https://github.com/tiamosu/X-FlyBanner.git
+website=https://github.com/tiamosu/X-FlyBanner
 publishVersion=1.1.3
 email=djy2009wenbi@gmail.com
 desc=Oh hi, this is a nice description for a project, right?
